--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					<div class="card w3-border w3-hover-opacity w3-hover-green" style="width: 25rem;">
 						<div class="mm"><img src="images/web_img.png" class="card-img-top" alt="..."></div>
 						<div class="card-body">
-						  <h5 class="card-title">Web Dedign</h5>
+						  <h5 class="card-title">Web Design</h5>
 						  
 						  
 						</div>
@@ -346,7 +346,7 @@
 									</div>
 									<div class="group_1_text group_3_text">
 										<h3> Alan K Augustine</h3>
-										<p>We can do everythink,just put some hardwork.It give a colourfull world</p>
+										<p>You'll be damned if you do and damned if you don't</p>
 									</div>
 										<div class="clear"> </div>
 								 </div>
@@ -370,7 +370,7 @@
 									</div>
 									<div class="group_1_text group_3_text">
 										<h3>Alan K Augustine</h3>
-										<p>We can do everythink,just put some hardwork.It give a colourfull world</p>
+										<p>You'll be damned if you do and damned if you don't</p>
 									</div>
 										<div class="clear"> </div>
 								 </div>
